--- a/html/live.html
+++ b/html/live.html
@@ -121,7 +121,7 @@
 
 		const birth = new Date( `${birthday} ${time}` );
 		const now = new Date();
-		const second = getLiveSecond( birth, now ); //获取以生存秒数
+		const second = getLiveSecond( birth, now ); //获取总秒数
 
 		//生日日期	
 		const birthYear = birth.getFullYear();
