表达式修改

--- a/算法学习笔记/binary_search.html
+++ b/算法学习笔记/binary_search.html
@@ -22,7 +22,7 @@
 		return arr.sort((a, b) => a - b);
 	}
 
-	//二分查找（适用于有序列表，时间复杂度：log（n） ）
+	//二分查找（适用于有序列表，时间复杂度：O(log n）
 	const binarySearch = (list, val) => {
 		let left = 0;
 		let right = list.length - 1;
