备注错误修改

--- a/算法学习笔记/sort_algorithm.html
+++ b/算法学习笔记/sort_algorithm.html
@@ -35,8 +35,8 @@
 		return list;
 	}
 
-	//快速排序算法
-	const quickSort = (list) => {
+	//冒泡排序算法
+	const bubbleSort = (list) => {
 		for(let i = 0; i < list.length; i++){
 			for(let k = 1; k < list.length; k++){
 				if(list[k] < list[k-1]){
