--- a/游戏demo/MineSweeper.html
+++ b/游戏demo/MineSweeper.html
@@ -60,43 +60,55 @@
 			background-color: #f44336;
 			color: #f44336;
 		}
+		.op-wrap{
+			width: 600px;
+			margin: 0 auto;
+			text-align: center;
+		}
 	</style>
 </head>
 <body>
 <div class="map" id="map"></div>
+<div class="op-wrap">
+	<button id="btn">开始游戏</button>
+</div>
 <script type="text/javascript">
 
 	let width = 30;  //图宽
 	let height = 16; //图高
 	let landmine = 90; //雷数
-
+	let num = 0;  //已排雷数
 	let $map = document.getElementById("map");
+	let $btn = document.getElementById("btn");
 
 	const clickHandle = (e) => {
 		let target = e.target;
 		let className = target.getAttribute('class');
+		let sign = target.getAttribute('sign');
 		let id = target.getAttribute('id');
-		if(className == 'box' && id){
+		if(className == 'box' && id && !sign){
 			let [x, y] = id.split('_')[1].split('-');
 			click(+x, +y)  //注意数据类型（坑）
 		}
 	}
 
-	//绑定点击事件
-	$map.addEventListener('click', clickHandle);
-	$map.oncontextmenu = (e) => e.preventDefault(); //禁用右键菜单
-	$map.onmouseup = (e) => {
+	const rightClickHandle = (e) => {
 		if(e.button == 2){ //表示右击
 			let target = e.target;
 			let className = target.getAttribute('class');
 			let id = target.getAttribute('id');
 			if(className == 'box' && id){
+				let type = target.getAttribute('type');
 				let sign = target.getAttribute('sign');
+				num += type == 'x' ? (sign ? -1 : +1) : 0;
 				sign ? target.removeAttribute('sign') :
-					target.setAttribute('sign', '1')
+					target.setAttribute('sign', '1');
 			}
 		}	
 	}
+
+	$map.oncontextmenu = (e) => e.preventDefault(); //禁用右键菜单
+	$btn.onclick = () => main();
 
 	const randomNum = (start, end) => {
 		let rg = end - start;
@@ -170,6 +182,10 @@
 	const main = () => {
 		let map = generateGameMap(width, height);
 		$map.innerHTML = render(map);
+		num = 0;
+		//绑定点击事件
+		$map.addEventListener('click', clickHandle);
+		$map.onmouseup = (e) => rightClickHandle(e)
 	}
 
 	const render = (map) => {
@@ -223,13 +239,12 @@
 			if(type == '0')
 				scanAroundClick(x, y);
 			else if(type == 'x'){
-				alert('游戏结束')
-				main()
+				$map.removeEventListener('click', clickHandle);
+				$map.onmouseup = null;
+				setTimeout(() => alert('游戏结束'), 15);
 			}
 		}
 	}
-
-	main();
 
 	const test = (x, y) => {
 		x = isNaN(x) ? randomNum(0, height) : x;
